# Omega-Framework

./: CMakeLists.txt  cpu.h  main.cpp  microcode.cpp  microcode.h
LEGACYRuntime/: cpu.cpp  microcode.cpp  microcode.h
OmegaAbstractionBridge/Core/Abstract/: StaticAnalyzer.h
OmegaAbstractionBridge/Core/Utility/: AssemblyAnalyzer.cpp  AssemblyAnalyzer.h  CommandAnalyzer.cpp  CommandAnalyzer.h  CommandParameterAnalyzer.cpp  CommandParameterAnalyzer.h  FieldAnalyzer.cpp  FieldAnalyzer.h  MethodAnalyzer.cpp  MethodAnalyzer.h  ModuleAnalyzer.h  NamespaceAnalyzer.cpp  NamespaceAnalyzer.h  ObjectAnalyzer.cpp  ObjectAnalyzer.h  ParameterAnalyzer.cpp  ParameterAnalyzer.h
OmegaAbstractionComponents/Architecture/PrimitiveAbstractions/: Command.cpp  Command.h  Depository.h
OmegaAbstractionComponents/Architecture/PrimitiveDataTypes/: Register.h  Registry.cpp  Registry.h  Stack.cpp  Stack.h
OmegaAbstractionComponents/Architecture/PrimitiveOperations/: Add.h  ISLoad.h  Pop.h  SILoad.h  Sload.h
OmegaBCF/Architecture/: ArchitectureDefines.cpp  ArchitectureDefines.h
OmegaBCF/Core/: ByteCodeMachine.cpp  ByteCodeMachine.h
OmegaBCF/Core/Abstractions/: Lexer.cpp
OmegaBCF/Core/Lexers/: InstructionsLexer.cpp  InstructionsLexer.h  MetadataLexer.cpp  MetadataLexer.h  MetadatasLexer.h
OmegaBCF/MetadataTokens/Abstractions/: MetadataToken.cpp  MetadataToken.h
OmegaBCF/MetadataTokens/Tokens/: Name.cpp  Name.h  Type.cpp  Type.h
OmegaBCF/Tokens/Abstractions/: Token.cpp  Token.h
OmegaBCF/Tokens/Tokens/: ADD.cpp  ADD.h  CMV.cpp  CMV.h  HLT.cpp  HLT.h  JMP.cpp  JMP.h  MOV.cpp  MOV.h  SCL.cpp  SCL.h
OmegaCTS/BTS/: SystemInteger.cpp  SystemInteger.h  SystemString.cpp  SystemString.h
OmegaCTS/Core/: ArchitecturalDefines.h  CTS.cpp  CTS.h  CTSObject.h  Object.cpp  PInteger.cpp  PInteger.h  PString.cpp  PString.h  PrimitiveReturnables.cpp  PrimitiveReturnables.h  Type.cpp  Type.h
OmegaCTS/Primitives/: PInteger.cpp  PString.cpp  PString.h  PrimitiveReturnables.h
OmegaCompilerService/Conglomerate/: AbstractStackFactory.cpp  AbstractStackFactory.h  FieldStackFactory.cpp  FieldStackFactory.h  InstructionStackFactory.cpp  InstructionStackFactory.h  MethodStackFactory.cpp  MethodStackFactory.h  ParameterStackFactory.cpp  ParameterStackFactory.h
OmegaCompilerService/Core/: AbstractToken.cpp  AbstractToken.h  AbstractTranslator.cpp  AbstractTranslator.h  ArchitecturalDefines.cpp  ArchitecturalDefines.h  AssemblyTranslator.cpp  AssemblyTranslator.h  Compiler.cpp  Compiler.h  FieldToken.cpp  FieldToken.h  InstructionToken.cpp  InstructionToken.h  MethodParameterToken.cpp  MethodParameterToken.h  MethodToken.cpp  MethodToken.h  ModuleTranslator.cpp  ModuleTranslator.h  ParameterToken.cpp  ParameterToken.h  Token.cpp  Token.h  TokenFinder.cpp  TokenFinder.h
OmegaCompilerService/Parsers/: AbstractParser.cpp  AbstractParser.h  FieldParser.cpp  FieldParser.h  InstructionParser.cpp  InstructionParser.h  MethodParameterParser.cpp  MethodParameterParser.h  MethodParser.cpp  MethodParser.h  ParameterParser.cpp  ParameterParser.h
OmegaJIT/: main.cpp
OmegaJITComponent/: cmplr.h  image.cpp
OmegaLoader/: bootstrap.h
OmegaLoaderComponent/: ldr.cpp
OmegaNaIGEN/: cmplr.h
OmegaNaIGENComponent/: SCL.cpp  SCL.h  add.cpp  add.h  cmv.cpp  cmv.h  hlt.cpp  hlt.h  jmp.cpp  jmp.h  mov.cpp  mov.h  sub.h  token.h  tokenFactory.cpp  tokenFactory.h
OmegaRuntime/Architecture/Abstractions/: Function.cpp  Function.h  Object.cpp  Object.h
OmegaRuntime/Architecture/ArchitecturalDefines/: RegistersType.h
OmegaRuntime/Architecture/CTS/: Integer.cpp  Integer.h  String.cpp  String.h  Type.cpp  Type.h
OmegaRuntime/Architecture/Legacy/: HLT.cpp  POP.cpp  POP.h  PSH.h  SCL.cpp
OmegaRuntime/Architecture/OperableTypes/: IntegerParameter.cpp  IntegerParameter.h  StringParameters.cpp  StringParameters.h
OmegaRuntime/Architecture/PrimitiveAbstractions/: Command.cpp  Command.h  Depository.h  Operation.cpp  Operation.h
OmegaRuntime/Architecture/PrimitiveDataTypes/: Cell.cpp  Register.cpp  Register.h  Registry.cpp  Registry.h  Stack.h
OmegaRuntime/Architecture/PrimitiveOperations/: ADD.cpp  ADD.h  Add.cpp  Add.h  CMV.cpp  CMV.h  HLT.h  ISLoad.cpp  ISLoad.h  JMP.cpp  MOV.cpp  MOV.h  PSH.cpp  Pop.cpp  Pop.h  SCL.h  SILoad.cpp  SILoad.h  Sload.cpp  Sload.h
OmegaRuntime/Runtime/Core/: Runtime.cpp  Runtime.h  TypeSystemController.cpp  TypeSystemController.h
OmegaRuntime/Runtime/DataTypes/: MethodsCode.cpp  MethodsCode.h  ROM.cpp  ROM.h
OmegaRuntime/Runtime/GarbageCollector/: GC.cpp  GC.h
OmegaRuntime/Runtime/PrimitiveOperations/: Add.h  ISLoad.cpp  ISLoad.h  Initobj.cpp  Initobj.h  Pop.cpp  Pop.h  Pushargs.cpp  Pushargs.h  SILoad.h  Sload.cpp  Sload.h
OmegaSoftwareALComponent/BasicAbstractions/: SoftwareAbstractionLayer.cpp  SystemCall.h
OmegaSoftwareALComponent/SystemCalls/: GetSystemCall.cpp  GetSystemCall.h  PrintSystemCall.cpp  PrintSystemCall.h
OmegaWriterComponent/: wrtr.h
Test/: main.cpp  main.h
asmcmplr/: cmplr.cpp  cmplr.h  token.cpp  token.h  tokenFactory.cpp  tokenFactory.h
asmcmplr/tokens/: add.cpp  add.h  cmv.cpp  cmv.h  hlt.cpp  hlt.h  jmp.cpp  jmp.h  mov.cpp  mov.h  sub.cpp  sub.h
asmjit/: main.cpp
bootstrap/: bootstrap.cpp  bootstrap.h
libNEXTRUNTIME/Architecture/ArchitecturalDefines/: RegistersType.cpp  RegistersType.h
libNEXTRUNTIME/Architecture/PrimitiveAbstractions/: Archive.cpp  Archive.h  Depository.cpp  Depository.h  Operation.cpp  Operation.h
libNEXTRUNTIME/Architecture/PrimitiveDataTypes/: Cell.cpp  Cell.h  (+3 more)
libcmp/: token.h  tokenFactory.cpp  tokenFactory.h
libjit/: cmplr.h  image.h
libldr/: ldr.h
librnt/: cpu.h  microcode.cpp
libsal/BasicAbstractions/: SoftwareAbstractionLayer.h  SystemCall.cpp
libsal/Manager/: SystemCallManager.cpp  SystemCallManager.h
libsal/SystemCalls/: PrintSystemCall.cpp
libsal/Utility/: AbstractData.cpp  AbstractData.h
libtkn/: SCL.h  add.cpp  add.h  cmv.cpp  cmv.h  hlt.cpp  hlt.h  jmp.cpp  jmp.h  mov.cpp  mov.h  sub.h
libwrt/: wrtr.cpp
runtime/: main.cpp  microcode.cpp
vmldr/: ldr.cpp  ldr.h
vmwrt/: wrtr.cpp  wrtr.h
(+72 files in other folders)
